# md2bb

./: .gitignore  CMakeLists.txt  README.md  convert.py  main.py  test.md
inc/: convert.h  target.h  target_list.h
src/: convert.c  main.c  target_list.c
src/targets/: phpbb.c  planetcasio.c
targets/: phpbb.py  planetcasio.py
